# cluster-server

./: README.md  pyproject.toml
inventory/: hosts
server/core/: models.py  urls.py  views.py
server/core/templates/: base.html  index.html
server/server/: settings.py  urls.py
ui/: package.json  vite.config.ts
ui/src/: App.tsx
